src/main/java/com/example/webfluxstart/reference_book/operators/error/domain/NotAllowedException.java
package com.example.webfluxstart.reference_book.operators.error.domain;

public class NotAllowedException extends RuntimeException{
}
